fix Horizontal Scroll

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 #main {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
 }
 
