--- a/src/components/Sections/About/About.css
+++ b/src/components/Sections/About/About.css
@@ -6,8 +6,9 @@
 
 #about .presentation-container{
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
     text-align: justify;
 }
 
