--- a/src/index.css
+++ b/src/index.css
@@ -52,14 +52,14 @@ html {
   font-family: 'Montserrat', sans-serif;
 
   font-size: 400;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 
   scroll-behavior: smooth;
 }
 
 @media screen and (max-width: 768px) {
   html {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   
     scroll-behavior: smooth;
   }
